--- a/ui/menu_volumenes.ui
+++ b/ui/menu_volumenes.ui
@@ -6,8 +6,8 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>377</width>
-    <height>381</height>
+    <width>333</width>
+    <height>374</height>
    </rect>
   </property>
   <property name="windowTitle">
@@ -17,10 +17,10 @@
    <widget class="QWidget" name="layoutWidget">
     <property name="geometry">
      <rect>
-      <x>70</x>
-      <y>60</y>
-      <width>234</width>
-      <height>281</height>
+      <x>60</x>
+      <y>30</y>
+      <width>203</width>
+      <height>251</height>
      </rect>
     </property>
     <layout class="QVBoxLayout" name="verticalLayout">
@@ -28,15 +28,11 @@
       <widget class="QLabel" name="label">
        <property name="font">
         <font>
-         <family>MS PGothic</family>
          <pointsize>16</pointsize>
         </font>
        </property>
-       <property name="cursor">
-        <cursorShape>OpenHandCursor</cursorShape>
-       </property>
        <property name="text">
-        <string>Figuras Geometricas</string>
+        <string>Menu Volumenes</string>
        </property>
        <property name="alignment">
         <set>Qt::AlignCenter</set>
@@ -44,50 +40,82 @@
       </widget>
      </item>
      <item>
-      <widget class="QPushButton" name="Btn_Perimetros">
+      <widget class="QPushButton" name="Btn_V_Esfera">
        <property name="font">
         <font>
          <family>MS PGothic</family>
          <pointsize>11</pointsize>
         </font>
        </property>
-       <property name="cursor">
-        <cursorShape>PointingHandCursor</cursorShape>
-       </property>
        <property name="text">
-        <string>Perimetros </string>
+        <string>Esfera</string>
        </property>
       </widget>
      </item>
      <item>
-      <widget class="QPushButton" name="Btn_Areas">
+      <widget class="QPushButton" name="Btn_V_Piramide">
        <property name="font">
         <font>
          <family>MS PGothic</family>
          <pointsize>11</pointsize>
         </font>
        </property>
-       <property name="cursor">
-        <cursorShape>PointingHandCursor</cursorShape>
-       </property>
        <property name="text">
-        <string>Areas</string>
+        <string>Piramide</string>
        </property>
       </widget>
      </item>
      <item>
-      <widget class="QPushButton" name="Btn_Volumenes">
+      <widget class="QPushButton" name="Btn_V_Cilindro">
        <property name="font">
         <font>
          <family>MS PGothic</family>
          <pointsize>11</pointsize>
         </font>
        </property>
-       <property name="cursor">
-        <cursorShape>PointingHandCursor</cursorShape>
+       <property name="text">
+        <string>Cilindro</string>
+       </property>
+      </widget>
+     </item>
+    </layout>
+   </widget>
+   <widget class="QWidget" name="layoutWidget">
+    <property name="geometry">
+     <rect>
+      <x>10</x>
+      <y>310</y>
+      <width>294</width>
+      <height>30</height>
+     </rect>
+    </property>
+    <layout class="QHBoxLayout" name="horizontalLayout">
+     <property name="spacing">
+      <number>100</number>
+     </property>
+     <item>
+      <widget class="QPushButton" name="Btn_Regresar">
+       <property name="font">
+        <font>
+         <family>MS PGothic</family>
+         <pointsize>11</pointsize>
+        </font>
        </property>
        <property name="text">
-        <string>Volumenes</string>
+        <string>Regresar</string>
+       </property>
+      </widget>
+     </item>
+     <item>
+      <widget class="QPushButton" name="Btn_Salir">
+       <property name="font">
+        <font>
+         <family>MS PGothic</family>
+         <pointsize>11</pointsize>
+        </font>
+       </property>
+       <property name="text">
+        <string>Salir</string>
        </property>
       </widget>
      </item>
